--- a/pom.xml
+++ b/pom.xml
@@ -42,10 +42,10 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.29</version>
         </dependency>
-        <dependency>
-            <groupId></groupId>
-            <artifactId></artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId></groupId>-->
+            <!--<artifactId></artifactId>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
