--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,25 @@
-apply plugin war;
+apply plugin: 'war';
+
+sourceCompatibility = 1.8
+version = 1.0
+ext {
+    cucumberVersion = "1.2.2"
+}
+repositories {
+    jcenter()
+}
+
+dependencies {
+    compile 'mysql:mysql-connector-java:5.1.34'
+    compile 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
+
+    testCompile "junit:junit:4.+"
+    testCompile "info.cukes:cucumber-java8:$cucumberVersion"
+    testCompile "info.cukes:cucumber-junit:$cucumberVersion"
+
+
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.3'
+}
