--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,39 @@
-apply plugin: 'war';
+apply plugin: "war"
+apply plugin: "jacoco"
 
 sourceCompatibility = 1.8
 version = 1.0
 ext {
     cucumberVersion = "1.2.2"
+    hibernateVersion = "4.3.9.Final"
+    unitilsVersion = "3.4.2"
+    springVersion = "4.3.6.RELEASE"
 }
 repositories {
     jcenter()
+//    mavenCentral()
 }
 
 dependencies {
+
     compile 'mysql:mysql-connector-java:5.1.34'
+    compile 'javax.ejb:javax.ejb-api:3.2'
+    compile "org.springframework:spring-context:$springVersion"
+    compile "org.springframework:spring-jdbc:$springVersion"
+    compile "org.springframework:spring-orm:$springVersion"
     compile 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
+    compile "org.hibernate:hibernate-core:$hibernateVersion"
+    compile "org.hibernate:hibernate-entitymanager:$hibernateVersion"
+    compile "org.projectlombok:lombok:1.16.+"
+
 
     testCompile "junit:junit:4.+"
     testCompile "info.cukes:cucumber-java8:$cucumberVersion"
     testCompile "info.cukes:cucumber-junit:$cucumberVersion"
-
-
+//    testCompile "org.jboss.arquillian.junit:arquillian-junit-container:1.1.8.Final"
+    testCompile "com.h2database:h2:1.4.+"
+    testCompile "org.unitils:unitils-dbunit:$unitilsVersion"
+    testCompile "org.unitils:unitils-spring:$unitilsVersion"
 }
 
 task wrapper(type: Wrapper) {
