--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,10 @@ sourceCompatibility = 1.8
 version = 1.0
 ext {
     cucumberVersion = "1.2.2"
-    hibernateVersion = "4.3.9.Final"
+    hibernateVersion = "5.2.6.Final"
     unitilsVersion = "3.4.2"
     springVersion = "4.3.6.RELEASE"
+    vertxVersion = "3.3.3"
 }
 repositories {
     jcenter()
@@ -17,25 +18,44 @@ repositories {
 dependencies {
 
     compile 'mysql:mysql-connector-java:5.1.34'
-    compile 'javax.ejb:javax.ejb-api:3.2'
-    compile "org.springframework:spring-context:$springVersion"
-    compile "org.springframework:spring-jdbc:$springVersion"
-    compile "org.springframework:spring-orm:$springVersion"
+    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.7'
+// https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.7'
+
+//    compile 'javax.ejb:javax.ejb-api:3.2'
+    // https://mvnrepository.com/artifact/io.vertx/vertx-core
+    compile "io.vertx:vertx-core:$vertxVersion"
+    compile "com.zaxxer:HikariCP:2.5.1"
+    compile "dom4j:dom4j:1.6.+"
+
+//    compile "org.springframework:spring-context:$springVersion"
+//    compile "org.springframework:spring-jdbc:$springVersion"
+//    compile "org.springframework:spring-orm:$springVersion"
+    compile "org.springframework.data:spring-data-jpa:1.11.0.RELEASE"
+
     compile 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
-    compile "org.hibernate:hibernate-core:$hibernateVersion"
-    compile "org.hibernate:hibernate-entitymanager:$hibernateVersion"
+    compile("org.hibernate:hibernate-core:$hibernateVersion"){
+        exclude group: "javax.transaction", module: "jta"
+        exclude group: "org.slf4j", module: "slf4j-api"
+        exclude group: "dom4j", module: "dom4j"
+    }
+    compile("org.hibernate:hibernate-entitymanager:$hibernateVersion"){
+        exclude group: "dom4j", module: "dom4j"
+    }
     compile "org.projectlombok:lombok:1.16.+"
 
 
     testCompile "junit:junit:4.+"
     testCompile "info.cukes:cucumber-java8:$cucumberVersion"
     testCompile "info.cukes:cucumber-junit:$cucumberVersion"
-//    testCompile "org.jboss.arquillian.junit:arquillian-junit-container:1.1.8.Final"
     testCompile "com.h2database:h2:1.4.+"
-    testCompile "org.unitils:unitils-dbunit:$unitilsVersion"
-    testCompile "org.unitils:unitils-spring:$unitilsVersion"
+    testCompile "org.springframework:spring-test:4.3.6.RELEASE"
+    testCompile "com.github.springtestdbunit:spring-test-dbunit:1.3.0"
+    testCompile "org.unitils:unitils-core:$unitilsVersion"
+    testCompile "org.dbunit:dbunit:2.5.3"
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.3'
+    gradleVersion = '3.3'
 }
