--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ ext {
     hibernateVersion = "5.2.6.Final"
     unitilsVersion = "3.4.2"
     springVersion = "4.3.6.RELEASE"
+    bootVersion = "1.5.2.RELEASE"
     vertxVersion = "3.3.3"
 }
 repositories {
@@ -18,39 +19,22 @@ repositories {
 dependencies {
 
     compile 'mysql:mysql-connector-java:5.1.34'
-    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.7'
-// https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.7'
 
-//    compile 'javax.ejb:javax.ejb-api:3.2'
-    // https://mvnrepository.com/artifact/io.vertx/vertx-core
     compile "io.vertx:vertx-core:$vertxVersion"
     compile "com.zaxxer:HikariCP:2.5.1"
     compile "dom4j:dom4j:1.6.+"
 
-//    compile "org.springframework:spring-context:$springVersion"
-//    compile "org.springframework:spring-jdbc:$springVersion"
-//    compile "org.springframework:spring-orm:$springVersion"
-    compile "org.springframework.data:spring-data-jpa:1.11.0.RELEASE"
+    compile "org.springframework.boot:spring-boot-starter-data-jpa:$bootVersion"
 
-    compile 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
-    compile("org.hibernate:hibernate-core:$hibernateVersion"){
-        exclude group: "javax.transaction", module: "jta"
-        exclude group: "org.slf4j", module: "slf4j-api"
-        exclude group: "dom4j", module: "dom4j"
-    }
-    compile("org.hibernate:hibernate-entitymanager:$hibernateVersion"){
-        exclude group: "dom4j", module: "dom4j"
-    }
     compile "org.projectlombok:lombok:1.16.+"
 
-
-    testCompile "junit:junit:4.+"
+    testCompile "org.springframework.boot:spring-boot-starter-test:$bootVersion"
     testCompile "info.cukes:cucumber-java8:$cucumberVersion"
     testCompile "info.cukes:cucumber-junit:$cucumberVersion"
     testCompile "com.h2database:h2:1.4.+"
-    testCompile "org.springframework:spring-test:4.3.6.RELEASE"
+
     testCompile "com.github.springtestdbunit:spring-test-dbunit:1.3.0"
     testCompile "org.unitils:unitils-core:$unitilsVersion"
     testCompile "org.dbunit:dbunit:2.5.3"
